# battle-royale

./: .gitattributes  .gitignore  blender-notes.md  build-godot.sh  cloudbuild-setup.sh  cloudbuild.yaml  load-testing.md  stress-test-plan.md
.github/workflows/: build-windows.yml  build.yml  godot-ci.yml  godot-google-ci.yml
godot/: HelloWorld.gdextension  HelloWorld.gdextension.uid  enums.gd  export_presets.cfg  low_level_network_handler.gd  low_level_network_handler.tscn  main.gd  main.tscn  main_menu.tscn  project.godot  test_terrain.scn
godot/assets/: icon.png.import
godot/autoload/: constants.gd  constants.gd.uid  enums.gd.uid  init.gd  init.gd.uid
godot/controllers/: fps_controller.tscn
godot_old/: crouching_movement_state.old.gd  crouching_movement_state.old.gd.uid  fps_controller.old.gd.uid  idle_movement_state.old.gd.uid  jumping_movement_state.old.gd  jumping_movement_state.old.gd.uid  movement_state.old.gd.uid  sprinting_movement_state.old.gd  sprinting_movement_state.old.gd.uid  state.old.gd.uid  state_machine.old.gd  state_machine.old.gd.uid  walking_movement_state.old.gd  walking_movement_state.old.gd.uid
rust/: Cargo.toml  config.toml
rust/src/: lib.rs  network_driver.rs  network_handler.rs  player.rs  server.rs
rust/src/data_structures/: jitter_buffer.rs  mod.rs  seq_ring_buffer.rs
rust/src/math/: sequence.rs
rust/src/packet/: chat.rs  conversions.rs  game_state.rs  gd_packet.rs  id_assignment.rs  macros.rs  mod.rs  null.rs  packet.rs  packet_data.rs  player_disconnected.rs  player_input.rs  player_state.rs  prelude.rs
(+415 files in other folders)
