[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
#game-networking-sockets = { git = "https://github.com/reecelikesramen/gns-rs.git" }
game-networking-sockets = "0.1.2"
godot = "0.4.2"
#godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
num-derive = "0.4.2"
num-traits = "0.2.19"
paste = "1.0.14"
postcard = { version = "1.0.10", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
